add fetch user profile data and other work with it and his organization, add filters for other microservices